ng model added for ffinvoice

--- a/src/app/pages/Invoice/FFInvoice.html
+++ b/src/app/pages/Invoice/FFInvoice.html
@@ -85,20 +85,20 @@
             <br/><br/><br/>
             <div class="col-md-12">
                 <div class="col-md-2"><b>Advance Payment:</b></div>
-                <div class="col-md-4"><input type="text" class="form-control"/></div>
+                <div class="col-md-4"><input type="text" ng-model="advancePayment" class="form-control"/></div>
             </div>
 
             <br/><br/><br/>
             <div class="col-md-12">
                 <div class="col-md-2"><b>Deliver Date:</b></div>
-                <div class="col-md-4"><input type="text" class="form-control"/></div>
+                <div class="col-md-4"><input type="text" ng-model="deliveredDate" class="form-control"/></div>
             </div>
 
 
             <br/><br/><br/>
             <div class="col-md-12">
                 <div class="col-md-2"><b>Cash Payment:</b></div>
-                <div class="col-md-4"><label><input type="checkbox" checked></label></div>
+                <div class="col-md-4"><label><input type="checkbox" ng-model="cashAmount" checked></label></div>
             </div>
 
             <br/><br/><br/>
