--- a/src/app/theme/inputs/baSwitcher/baSwitcher.html
+++ b/src/app/theme/inputs/baSwitcher/baSwitcher.html
@@ -2,9 +2,9 @@
   <input type="checkbox" ng-model="switcherValue">
   <div class="switcher" ng-class="::switcherStyle">
     <div class="handle-container">
-      <span class="handle handle-on">ON</span>
+      <span class="handle handle-on">Present</span>
       <span class="handle"></span>
-      <span class="handle handle-off">OFF</span>
+      <span class="handle handle-off">Absent</span>
     </div>
   </div>
 </label>
