--- a/src/app/pages/form/inputs/widgets/datePickers/datePickers.html
+++ b/src/app/pages/form/inputs/widgets/datePickers/datePickers.html
@@ -11,7 +11,8 @@
         <h4>Popup</h4>
         <label>Selected date is: <em>{{dt | date:'fullDate' }}</em></label>
         <p class="input-group">
-            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="dt" is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
+            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options"
+                   ng-model="dt" is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
