--- a/src/sass/theme/components/_widgets.scss
+++ b/src/sass/theme/components/_widgets.scss
@@ -7,12 +7,17 @@
   margin: 0 -22px -16px;
 }
 
+.table-collapse{
+  opacity:0;
+  transition: 2s;
+}
 .horizontal-scroll {
   overflow-x: auto;
   overflow-y: visible;
 }
-
-
+.change-colour tr:hover{
+  background-color: #0b93d5;
+}
 .vertical-scroll {
   overflow-x: auto;
   overflow-y: auto;
