--- a/src/sass/theme/components/_widgets.scss
+++ b/src/sass/theme/components/_widgets.scss
@@ -19,7 +19,7 @@
 .customer_callout div{
   height: 94px;
   width: 100%;
-  overflow-y:scroll;overflow-x:hidden;
+  overflow-y:auto;overflow-x:hidden;
 }
 .customer_callout::before {
   content: "";
