--- a/src/app/pages/tables/Customer/ListCustomer.html
+++ b/src/app/pages/tables/Customer/ListCustomer.html
@@ -46,7 +46,7 @@
                                 <th  style="padding-left: 100px;"><b>Date</b></th>
 
                             </tr>
-                            <tr rowspan="2">
+                            <tr >
                                 <td style="text-align: left;padding-left: 100px;">{{itemDetail.debitAmount}}</td>
                                 <td style="text-align: left;padding-left: 100px;">{{itemDetail.creditAmount}}</td>
                                 <td style="text-align: left;padding-left: 100px;">{{itemDetail.date}}</td>
@@ -54,13 +54,23 @@
                             <tr>
                                 <td colspan="3">
                                     <div class="customer_callout bottom" style="width: 100%;margin-top: 12px" >
-                                            <div>lknlnlkn<br/>
-                                        lknlnlkn<br/>
-                                        lknlnlkn<br/>
-                                        lknlnlkn<br/>
-                                        lknlnlkn<br/>
-                                        lknlnlkn<br/>
-                                        lknlnlkn<br/></div>
+                                            <div>
+                                                <table class="table table-condensed ">
+                                                    <tr>
+                                                        <th rowspan="20" ><div style="margin-top: 40px;">Sales Data: <span class="glyphicon glyphicon-triangle-right"></span> </div></th>
+                                                        <th  style="padding-left: 100px;"><b>Debit</b></th>
+                                                        <th style="padding-left: 100px;"><b>Credit</b></th>
+                                                        <th  style="padding-left: 100px;"><b>Date</b></th>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="text-align: left;padding-left: 100px;">{{itemDetail.debitAmount}}</td>
+                                                        <td style="text-align: left;padding-left: 100px;">{{itemDetail.creditAmount}}</td>
+                                                        <td style="text-align: left;padding-left: 100px;">{{itemDetail.date}}</td>
+                                                    </tr>
+
+                                                </table>
+                                            </div>
                                     </div>
                                 </td>
                             </tr>
